--- a/SeriesPart9-vue-loader/18 - Vue Ajax Requests With Axios/src/main/resources/application.properties
+++ b/SeriesPart9-vue-loader/18 - Vue Ajax Requests With Axios/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#Thymeleaf
 spring.thymeleaf.cache=false
+#Jackson
+spring.jackson.serialization.indent-output=true
+spring.jackson.date-format=dd-MM-yyyy HH:mm:ss
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.deserialization.fail-on-unknown-properties=false
+spring.jackson.time-zone=America/Argentina/Buenos_Aires
